--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: BigBangBro
 SEOTitle: 乔邦的博客 | BigBangBro
-header-img: img/bground.jpg
+header-img: img/123.jpg
 email: holyshitok@gmail.com
 description: "作之不止的伪君子"
 keyword: "QiaoBang, BigBangBro, 乔邦, 前端，乔邦的博客"
