--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ disqus_username: qiaobang
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "像少年一样去奋斗，像润叶一样去爱。"
+sidebar-about-description: "作之不止的伪君子"
 sidebar-avatar: /img/cat.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
