--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ disqus_username: qiaobang
 
 # # Analytics settings
 # # Baidu Analytics
- ba_track_id: cc3573f12bd73519fc1b837e87f6a53e
+ #ba_track_id: cc3573f12bd73519fc1b837e87f6a53e
 # # Google Analytics
 # ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
 # ga_domain: huangxuan.me
