--- a/_config.yml
+++ b/_config.yml
@@ -58,9 +58,10 @@ disqus_username: qiaobang
 
 
 
-  Analytics settings
- Baidu Analytics
- ba_track_id: 558a96a21223b1c09f874f21a2819127
+ # Analytics settings
+# # Baidu Analytics
+ #ba_track_id: cc3573f12bd73519fc1b837e87f6a53e
+               558a96a21223b1c09f874f21a2819127
 # # Google Analytics
 # ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
 # ga_domain: huangxuan.me
