--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ disqus_username: qiaobang
  ba_track_id: 558a96a21223b1c09f874f21a2819127
 # # Google Analytics
 # ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-# ga_domain: huangxuan.me
+ ga_domain: bigbangbro.com
 
 
 
