--- a/_config.yml
+++ b/_config.yml
@@ -58,12 +58,12 @@ disqus_username: qiaobang
 
 
 
-# Analytics settings
-# Baidu Analytics
- ba_track_id: 558a96a21223b1c09f874f21a2819127
-# # Google Analytics
-# ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
- ga_domain: bigbangbro.com
+# # Analytics settings
+# # Baidu Analytics
+#  ba_track_id: 558a96a21223b1c09f874f21a2819127
+# # # Google Analytics
+# # ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
+#  ga_domain: auto
 
 
 
