--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-    "name": "BigBangBro",
-    "title": "BigBangBro",
-    "version": "1.0.0",
-    "homepage": "http://qiaobang.github.io",
-    "author": "BigBangBro",
+    "name": "by-blog",
+    "title": "BY Blog",
+    "author": "BY <qiubaiyingios@163.com>",
+    "version": "1.7.0",
+    "homepage": "http://qiubaiying.github.io",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/qiubaiying/qiubaiying.github.io"
+    },
+    "bugs": "https://github.com/qiubaiying/qiubaiying.github.io/issues",
     "devDependencies": {
         "grunt": "~0.4.5",
         "grunt-contrib-less": "~0.11.4",
@@ -11,12 +16,13 @@
         "grunt-banner": "~0.2.3",
         "grunt-contrib-uglify": "~0.5.1"
     },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/QiaoBang/QiaoBang.github.io"
-    },
     "scripts": {
         "preview": "cd _site; python -m SimpleHTTPServer 8020",
-        "watch": "grunt watch & npm run preview & jekyll serve -w;"
+        "py3view": "cd _site; python3 -m http.server 8020",
+        "watch"  : "grunt watch & npm run preview & jekyll serve -w",
+        "py3wa"  : "grunt watch & npm run py3view & jekyll serve -w",
+        "boil"   : "git push boilerplate boilerplate:master",
+        "push"   : "git push origin master --tag",
+        "cafe"   : "git co gitcafe-pages; git merge master; git push gitcafe gitcafe-pages:gitcafe-pages --tag; git co master;"
     }
 }
