--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ﻿
 # Site settings
-title: BigBangBro
-SEOTitle: 非刀尺 | BigBangBro
+title: 学习学习再学习
+SEOTitle: Sisyphus's Task
 # 乔邦的博客 | BigBangBro
 header-img: img/123.jpg
 email: holyshitok@gmail.com
