--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ﻿
 # Site settings
-title: 学习学习再学习
+title: Sisyphus's Task
 SEOTitle: Sisyphus's Task
 # 乔邦的博客 | BigBangBro
 header-img: img/123.jpg
