--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ SEOTitle: Sisyphus's Task
 # 乔邦的博客 | BigBangBro
 header-img: img/123.jpg
 email: holyshitok@gmail.com
-description: "作之不止的伪君子"
+description: "儒雅随和"
 keyword: "QiaoBang, BigBangBro, "
 url: " https://qiaobang.github.io"              # your host, for absolute URL
 # baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "作之不止的伪君子"
+sidebar-about-description: "儒雅随和"
 sidebar-avatar: /img/cat.jpg     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
