--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 ﻿
 # Site settings
 # 窥屏狗宁来啦~
-title: 七落锁
-SEOTitle: 七落锁
+title: 七落索
+SEOTitle: 七落索
 header-img: img/123.jpg
 description: "一句封喉。"
-keyword: "七落锁, 东江水 "
+keyword: "七落索 东江水  公平 正义 庆余年 独立撰稿人 毒舌 "
 url: " https://qiluosuo.github.io"              # host, for absolute URL
 
 # Sidebar settings
